# AlgoTemplates

./: .gitignore  CMakeLists.txt  README.md
Graphs/Flows/: Dinic.cpp  EdmondsCarp.cpp  EdmondsCarpScalling.cpp  FordFalkerson.cpp
Graphs/Flows/MCMF/: JhonsonPotentials.cpp  README.md
Graphs/Flows/MCMF/List/: JhonsonPotentialsFractional.cpp  JhonsonPotentialsInteger.cpp
Graphs/Flows/MCMF/Matrix/: JhonsonPotentialsFractional.cpp  JhonsonPotentialsInteger.cpp
Graphs/Flows/MaxFlow/: Dinic.cpp  EdmondsCarp.cpp  EdmondsCarpScalling.cpp
Graphs/ShortestPathes/: Dijkstra.cpp  FordBellman.cpp
Graphs/ShortestPathes/Dijkstra/: DijkstraFractional.cpp  DijkstraInteger.cpp
Graphs/ShortestPathes/FordBellman/: FordBellmanFractional.cpp  FordBellmanInteger.cpp
Math/: DivisorsSieve.cpp  FactorizationSieve.cpp  FastGcdLcm.cpp  ModInt.cpp
Other/: circles_to_tree_scanline.cpp
Strings/: hash.cpp
Structures/Trees/SegTrees/Persistent/: LongestSegmentOfOnes.cpp  Min.cpp
Structures/Trees/Segment/Default/: MaxAdd.cpp  MaxAddWithPos.cpp  MaxAddWithPos2.cpp  Template.cpp
Structures/Trees/Segment/Persistent/: Min.cpp  Sum.cpp
Structures/Trees/Splay/: ImplicitSplayTreeBase.cpp  ImplicitSplayTreeWithLazyOperations.cpp
